Modificando el proyecto

--- a/integrative_project_M3.ipynb
+++ b/integrative_project_M3.ipynb
@@ -293,7 +293,7 @@
     "conexion = pymysql.connect(\n",
     "   host='localhost',\n",
     "   user='root',\n",
-    "   passwd='12345678',\n",
+    "   passwd='',\n",
     "   db='cuspide_100'\n",
     ")\n",
     "cursor = conexion.cursor()"
